Add '25w04a' sources